# Generated by Django 5.1.2 on 2024-10-29 22:28

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('SportsSyncApi', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Game',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('game_id', models.CharField(max_length=20, unique=True)),
                ('date', models.DateTimeField()),
                ('status', models.CharField(choices=[('scheduled', 'Scheduled'), ('live', 'Live'), ('final', 'Final')], default='scheduled', max_length=20)),
                ('period', models.IntegerField(default=0)),
                ('time', models.CharField(blank=True, max_length=20)),
                ('arena', models.CharField(blank=True, max_length=100)),
                ('home_team_id', models.CharField(max_length=10)),
                ('home_team_score', models.IntegerField(default=0)),
                ('home_team_city', models.CharField(max_length=50)),
                ('home_team_name', models.CharField(max_length=50)),
                ('home_team_record', models.CharField(blank=True, max_length=20)),
                ('visitor_team_id', models.CharField(max_length=10)),
                ('visitor_team_score', models.IntegerField(default=0)),
                ('visitor_team_city', models.CharField(max_length=50)),
                ('visitor_team_name', models.CharField(max_length=50)),
                ('visitor_team_record', models.CharField(blank=True, max_length=20)),
                ('home_team_stats', models.JSONField(blank=True, null=True)),
                ('visitor_team_stats', models.JSONField(blank=True, null=True)),
                ('broadcasts', models.JSONField(blank=True, null=True)),
                ('officials', models.JSONField(blank=True, null=True)),
                ('plays', models.JSONField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'ordering': ['-date'],
            },
        ),
        migrations.CreateModel(
            name='Team',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('team_id', models.CharField(max_length=10, unique=True)),
                ('city', models.CharField(max_length=50)),
                ('name', models.CharField(max_length=50)),
                ('full_name', models.CharField(max_length=100)),
                ('abbreviation', models.CharField(max_length=3)),
                ('conference', models.CharField(max_length=10)),
                ('division', models.CharField(max_length=20)),
                ('wins', models.IntegerField(default=0)),
                ('losses', models.IntegerField(default=0)),
            ],
        ),
        migrations.DeleteModel(
            name='User',
        ),
    ]
